--- a/ASSIGNMENT.html
+++ b/ASSIGNMENT.html
@@ -60,7 +60,7 @@
 
     .search-container {
       display: flex;
-      justify-content: right;
+      justify-content: center;
       margin-bottom: 40px;
       margin-top: 20px;
     }
@@ -105,10 +105,10 @@
   <script>
     window.addEventListener('DOMContentLoaded', function() {
       var data = [
-        { id: 1, name: "Akhil", image: "Profile picc.jpg" },
-        { id: 2, name: "Akhil2", image: "Profile picc.jpg" },
-        { id: 3, name: "Akhil3", image: "Profile picc.jpg" },
-        { id: 4, name: "Akhil4", image: "Profile picc.jpg" }
+        { id: 1, name: "Akhil", image: "akhil.jpg" },
+        { id: 2, name: "Gaurav", image: "gaurav.jpg" },
+        { id: 3, name: "Mohan", image: "mohan.jpg" },
+        { id: 4, name: "Tejas", image: "tejas.jpg" }
       ];
 
       var nameList = document.getElementById('name-list');
